Added Self Driving

--- a/index.html
+++ b/index.html
@@ -88,6 +88,19 @@
         </div>
 
 
+        <div class="example">
+          <a href="selfDriving/" class="exampleLink">
+            <div class="exampleTitleContainer">
+              <div class="exampleTitle">Autonomous Vehicles and Employment</div>
+            </div>
+            <div class="imageSwapContainer">
+              <img src="assets/selfDriving.gif" style="display:none" class="hiddenMotion" />
+              <img src="assets/selfDriving.png" style="display:block" class="staticOverlay"/>
+            </div>
+            <p>A look at how the coming future of Self-Driving vehicles may impact employment and tax revenues.</p>
+          </a>
+        </div>
+
       </div>
 
     </div>
