Pitcher Strip Plot Added

--- a/index.html
+++ b/index.html
@@ -101,6 +101,20 @@
           </a>
         </div>
 
+
+        <div class="example">
+          <a href="stripPlot/" class="exampleLink">
+            <div class="exampleTitleContainer">
+              <div class="exampleTitle">Pitching Data visualization</div>
+            </div>
+            <div class="imageSwapContainer">
+              <img src="assets/stripPlot.gif" style="display:none" class="hiddenMotion" />
+              <img src="assets/stripPlot.png" style="display:block" class="staticOverlay"/>
+            </div>
+            <p>Re-designing statistical tables for better communication, readability, and context.</p>
+          </a>
+        </div>
+
       </div>
 
     </div>
