Fixed Index Typo

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="example">
           <a href="stripPlot/" class="exampleLink">
             <div class="exampleTitleContainer">
-              <div class="exampleTitle">Pitching Data visualization</div>
+              <div class="exampleTitle">Pitching Data Visualization</div>
             </div>
             <div class="imageSwapContainer">
               <img src="assets/stripPlot.gif" style="display:none" class="hiddenMotion" />
