--- a/babip/index.html
+++ b/babip/index.html
@@ -75,7 +75,7 @@
 
 
 		<h1>A Lot of Baseball is Luck</h1>
-    <h2>How One Analyst Accidentally Upended Baseball Statitistics</h2>
+    <h2>How One Analyst Accidentally Upended Baseball Statistics</h2>
     <p><em>By <a href="http://timmarco.com">Tim Marco</a></em></p>
 		<p>Late in the last millennium, Voros McCracken realized something that completely revolutionized how people thought about baseball statistics. Sportswriter Jeff Passan  has said that his discovery is among "the most seminal theories" developed by baseball's then newly-influential group of armchair analysts.</p>
 		<p>As it turns out, his idea is also a great introduction into sabermetrics (the term for statistical analysis in baseball).</p>
