--- a/FreeAgents/index.html
+++ b/FreeAgents/index.html
@@ -14,6 +14,16 @@
   </head>
 
   <body>
+
+    <div class="mobileOverlay" style="display:none">
+      <div class="mobileOverlayContainer">
+      <div class="mobileOverlayHeadline">Heads up!</div>
+        <p>This is a demo of a tool designed for analysts using a computer with a cursor. It isn't optimized for mobile devices.</p>
+        <p>To get the full experience, please check this page out on a computer.</p>
+        <div id="mobileButton">Got it! I want to check it out, anyway!</div>
+      </div>
+    </div>
+
     <div id="positionFilter" style="position:absolute; background-color:white;"></div>
     <div class="pageHeader">
       <div class="pageHeaderContents">
@@ -67,7 +77,7 @@
 
         <div>
           <h1>2018 Performance</h1>
-          <p>The tables below show <span class='playerName'>[player name]</span>'s recent performance across a range of metrics.</p>
+          <p>The tables below show <span class='playerName'></span>'s recent performance across a range of metrics.</p>
           <div id="showStats"></div>
         </div>
       </div>
@@ -115,6 +125,39 @@
               .style("display","none");
           });
       }
+
+
+      if(detectmob()) {
+        console.log("DETECTED MOBILE!?");
+
+        d3.select(".mobileOverlay")
+          .style("display","block");
+
+        d3.select("#mobileButton")
+          .on('click',function() {
+            console.log("CLICKED!");
+
+            d3.select(".overlay")
+              .remove();
+            });
+      };
+
+      function detectmob() {
+       if( navigator.userAgent.match(/Android/i)
+       || navigator.userAgent.match(/webOS/i)
+       || navigator.userAgent.match(/iPhone/i)
+       || navigator.userAgent.match(/iPad/i)
+       || navigator.userAgent.match(/iPod/i)
+       || navigator.userAgent.match(/BlackBerry/i)
+       || navigator.userAgent.match(/Windows Phone/i)
+       ){
+          return true;
+        }
+       else {
+          return false;
+        }
+      }
+
 
 
 
