--- a/FreeAgents/index.html
+++ b/FreeAgents/index.html
@@ -160,5 +160,18 @@
 
 
     </script>
+
+
+
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-104067970-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-104067970-1');
+  </script>
+
   </body>
 </html>
