--- a/PitchTool/index.html
+++ b/PitchTool/index.html
@@ -13,10 +13,14 @@
       <div id="selector">
         <h1>Pitch Plotter Tool</h1>
         <div class="note">
-          <p>This is the note about what this page is and how to use it there are many lines and it goes on so it takes up more than one line.</p>
+          <p>This is a tool for viewing pitches faced by batters in 2019.</p>
           <p><strong>Click on a player below</strong> to see every pitch they've faced through in 2019 (Updated July 28th).</p>
+          <p>After selecting a player, you can filter the region of pitches by dragging on the circles in the corner:</p>
+          <img src="filterRegion.gif" />
+          <p>And view specific pitches by hovering over the bars on the right:</p>
+          <img src="seePitches.gif" />
         </div>
-
+        <h3>Select a Player &darr;</h3>
         <div id="playerList"></div>
       </div>
 
