--- a/PitchTool/index.html
+++ b/PitchTool/index.html
@@ -26,6 +26,8 @@
 
       <div id="viewer" style="display:none">
         <h1>Pitches faced by <span class='playerName'></span> in 2019 <a href="">Go Back</a></h1>
+        <div class="switchPerspective perspectiveCurrentChoice" data-perspective="catcher">Catcher's Perspective</div>
+        <div class="switchPerspective" data-perspective="pitcher">Pitcher's Perspective</div>
         <div>
           <div style="float:left">
             <svg width="700" height="700" id="tempCatcher"></svg>
