Fixed Minor Bugs

--- a/PitchTool/index.html
+++ b/PitchTool/index.html
@@ -25,7 +25,8 @@
       </div>
 
       <div id="viewer" style="display:none">
-        <h1>Pitches faced by <span class='playerName'></span> in 2019 <a href="">Go Back</a></h1>
+        <h1>Pitches <span id="
+          "></span> by <span class='playerName'></span> in 2019 <a href="">Go Back</a></h1>
         <div class="switchPerspective perspectiveCurrentChoice" data-perspective="catcher">Catcher's Perspective</div>
         <div class="switchPerspective" data-perspective="pitcher">Pitcher's Perspective</div>
         <div>
