Fixed Thrown-Faced Typo

--- a/PitchTool/index.html
+++ b/PitchTool/index.html
@@ -13,8 +13,8 @@
       <div id="selector">
         <h1>Pitch Plotter Tool</h1>
         <div class="note">
-          <p>This is a tool for viewing pitches faced by batters in 2019.</p>
-          <p><strong>Click on a player below</strong> to see every pitch they've faced through in 2019 (Updated July 28th).</p>
+          <p>This is a tool for viewing pitches thrown in 2019.</p>
+          <p><strong>Click on a player below</strong> to see every pitch they've thrown or faced through in 2019 (Updated July 28th).</p>
           <p>After selecting a player, you can filter the region of pitches by dragging on the circles in the corner:</p>
           <img src="filterRegion.gif" />
           <p>And view specific pitches by hovering over the bars on the right:</p>
@@ -25,8 +25,7 @@
       </div>
 
       <div id="viewer" style="display:none">
-        <h1>Pitches <span id="
-          "></span> by <span class='playerName'></span> in 2019 <a href="">Go Back</a></h1>
+        <h1>Pitches <span id="thrownFaced"></span> by <span class='playerName'></span> in 2019 <a href="">Go Back</a></h1>
         <div class="switchPerspective perspectiveCurrentChoice" data-perspective="catcher">Catcher's Perspective</div>
         <div class="switchPerspective" data-perspective="pitcher">Pitcher's Perspective</div>
         <div>
