--- a/PitchTool/index.html
+++ b/PitchTool/index.html
@@ -5,6 +5,15 @@
     <script src="dist/all.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.7/d3.min.js"></script>
     <link rel="stylesheet" href="style/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap" rel="stylesheet">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-104067970-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-104067970-1');
+    </script>
   </head>
 
   <body>
