--- a/PoseTool/index.html
+++ b/PoseTool/index.html
@@ -6,6 +6,14 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/style.css"/ >
     <script src="dist/all.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-104067970-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-104067970-1');
+    </script>
   </head>
 
   <body>
